--- a/MVVM_with_Kotlin/app/build.gradle
+++ b/MVVM_with_Kotlin/app/build.gradle
@@ -43,6 +43,15 @@ dependencies {
     //Room components
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Android KTX
+    implementation 'androidx.core:core-ktx:1.0.0-beta01'
+
+    // Anko Commons
+    implementation "org.jetbrains.anko:anko-commons:0.10.5"
+
+    //material design
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
 }
 
     apply plugin: 'kotlin-kapt'
